k8s/hapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapi-fhir
  namespace: ayushsetu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hapi-fhir
  template:
    metadata:
      labels:
        app: hapi-fhir
    spec:
      containers:
        - name: hapi-fhir
          image: hapiproject/hapi:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hapi-fhir
  namespace: ayushsetu
spec:
  selector:
    app: hapi-fhir
  ports:
    - port: 8080
      targetPort: 8080
